--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,11 @@
-echo "# index.html" >> README.md 
-git init 
-git add README.md 
-git commit -m "primeiro commit" 
-git branch -M main 
-git remote add origin https://github.com/enzoborges012-ship-it/Luta.html.git
- git push -u origin main
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Meu jogo</title>
+</head>
+<body>
+  <h1>Meu jogo funcionou 🎉</h1>
+  <p>Se você está vendo isso, o GitHub Pages está OK!</p>
+</body>
+</html>
